# ImageBot

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  env_example  pyproject.toml  requirements.txt
bots/agent_bot/: main.py
bots/agent_bot/FSM/: fsm.py
bots/agent_bot/handlers/: user_handlers.py  utils.py
bots/agent_bot/keyboard/: keyboards.py
bots/agent_bot/tgConfig/: tgConfig.py
bots/agents/: agent.py
bots/agents/fsm/: fsm.py
bots/agents/handlers/: user_handlers.py  utils.py
bots/agents/keyboards/: keyboard.py
bots/agents/tgConfig/: tgConfig.py
bots/customer_bot/: main.py
bots/customer_bot/handlers/: user_handlers.py  utils.py
bots/customers/: customer.py
bots/customers/fsm/: fsm.py
bots/customers/handlers/: user_handlers.py  utils.py
bots/customers/keyboards/: keyboards.py  menu.py
bots/tgConfig/: redis_connect.py  tgConfig.py
config/: settings.py
post/: admin.py  models.py
post/migrations/: 0001_initial.py  0002_post_address.py  0003_post_creation_time.py  0004_remove_post_creation_time_postagent.py  0005_postagent_document.py  0006_post_document.py
shop/: admin.py  models.py  utils.py
shop/migrations/: 0001_initial.py  0002_agent.py  0003_shop_description_shop_region_shop_manager_name.py
shop/templates/: export_date_range.html  export_date_range1.html
tgbot/: main.py
tgbot/FSM/: fsm.py
tgbot/handlers/: user_handlers.py  utils.py
tgbot/keyboard/: keyboards.py
tgbot/tgConfig/: tgConfig.py
tgbotAgent/: main.py
tgbotAgent/handlers/: user_handlers.py  utils.py
tgbotAgent/tgConfig/: tgConfig.py
tguser/: apps.py  models.py
tguser/migrations/: 0001_initial.py
(+1 files in other folders)
