[project]
name = "imagebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiogram>=3.19.0",
    "aioredis>=2.0.1",
    "apscheduler>=3.11.0",
    "django>=5.2",
    "environs>=14.1.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "piexif>=1.1.3",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "ruff>=0.11.4",
    "setuptools>=78.1.0",
    "wheel>=0.45.1",
    "whitenoise>=6.9.0",
    "xlwt>=1.3.0",
]
